package structural._3_facade.hardware;

public class ComputerCase {
	public void pressPowerButton() {
		System.out.println("컴퓨터 케이스 : 전원버튼을 누름");
	}
}
