package structural._3_facade.hardware;

public class Mouse {
	public void click() {
		System.out.println("마우스 : 클릭");
	}

	public void move() {
		System.out.println("마우스 : 움직임");
	}
}

